# autoglyphs

./: LICENSE  README.md  pyproject.toml
autoglyphs/: __init__.py  autoglyphs.py
scripts/: run.py  seeds.txt
