[tool.poetry]
name = "autoglyphs"
version = "0.1.0"
description = ""
authors = ["j1c <jaewonc78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.23.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
